--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 	<!-- Responsive CSS -->
 	<link rel="stylesheet" href="assets/css/responsive.css">
-
 </head>
 <body>
     <!-- ===============  Preloader start =============== -->
@@ -57,7 +56,6 @@
 							<ul>
 								<li>
 									<a href="#"><span>Egens</span> About Us</a>
-									
 								</li>
 								<li>
 									<a href="#"><span>Talent</span> Services</a>
@@ -87,19 +85,32 @@
 			</div>
 		</div>
 	</header>
-	<div class="collapse-menu-slide">
-		<div class="collapse-menu-slide-wrapper">
-			<div class="collapse-menu">
-				<i class="bi bi-x-lg"></i>
+	<div class="mobile-menu">
+		<div class="mobile-menu-wrapper">
+			<div class="mobile-menu-header d-flex justify-content-between mb-5">
+				<div class="mobile-logo">
+					<img src="assets/images/egenslab-logo.png" alt="">
+				</div>
+				<div class="mobile-menu-close">
+					<i class="bi bi-x-lg"></i>
+				</div>
 			</div>
-			<ul class="collapse-menu-items">
-				<li><a href="#">Home</a></li>
+			<ul class="mobile-menu-items">
 				<li><a href="#">About Us</a></li>
 				<li><a href="#">Services</a></li>
-				<li><a href="#">Case Study</a></li>
-				<li><a href="#">Blog</a></li>
-				<li><a href="#">Contact Us</a></li>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">News</a></li>
+				<li><a href="#">Products</a></li>
+				<li><a href="#">Contact</a></li>
 			</ul>
+			<div class="social-connect">
+				<ul>
+					<li><a href="#">Facebook</a></li>
+					<li><a href="#">Instagram</a></li>
+					<li><a href="#">Twitter</a></li>
+					<li><a href="#">Linkedin</a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 	<!-- Header Section End  -->
@@ -119,12 +130,8 @@
 			<div class="container">
 				<div class="hero-area-content">
 					<h1>We Are Creative Design</h1>
-					<h1 class="ml11">
-						<span class="text-wrapper">
-						  <span class="line line1"></span>
-						  <span class="letters">Agency Company</span>
-						</span>
-					  </h1>
+					<h1 class="ml3">Great Thinkers</h1>
+
 					<a class="btn hero-btn" href="#">Discover More</a>
 				</div>
 			</div>
@@ -147,9 +154,9 @@
 				</div>
 				<div class="col-xxl-7 col-xl-8 col-lg-12 col-md-12 col-sm-12 col-xs-12 px-0">
 					<div class="section-content-area">
-						<div class="row g-0">
-							<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-								<div class="service-item">
+						<div class="row g-4 d-flex justify-content-center">
+							<div class="col-lg-4 col-md-6 col-sm-6 col-xs-11">
+								<div class="service-item hover-style"> <span></span>
 									<img src="assets/images/services-svg/design.svg" alt="">
 									<h3>UI/UX  Design</h3>
 									<p>Egens Lab, design team is dedicated to creating an experience that make the best 
@@ -160,8 +167,8 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-								<div class="service-item">
+							<div class="col-lg-4 col-md-6 col-sm-6 col-xs-11">
+								<div class="service-item hover-style"> <span></span>
 									<img src="assets/images/services-svg/web-development.svg" alt="">
 									<h3>Web Development</h3>
 									<p>Egens Lab, design team is dedicated to creating an experience 
@@ -172,8 +179,8 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-								<div class="service-item">
+							<div class="col-lg-4 col-md-6 col-sm-6 col-xs-11">
+								<div class="service-item hover-style"> <span></span>
 									<img src="assets/images/services-svg/app-development.svg" alt="">
 									<h3>App Development</h3>
 									<p>Egens Lab, design team is dedicated to creating an experience 
@@ -184,8 +191,8 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-								<div class="service-item">
+							<div class="col-lg-4 col-md-6 col-sm-6 col-xs-11">
+								<div class="service-item hover-style"> <span></span>
 									<img src="assets/images/services-svg/design.svg" alt="">
 									<h3>Saas Application</h3>
 									<p>Egens Lab, design team is dedicated to creating an experience that 
@@ -196,8 +203,8 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-								<div class="service-item">
+							<div class="col-lg-4 col-md-6 col-sm-6 col-xs-11">
+								<div class="service-item hover-style"> <span></span>
 									<img src="assets/images/services-svg/design.svg" alt="">
 									<h3>Software Development</h3>
 									<p>Egens Lab, design team is dedicated to creating an experience that
@@ -208,8 +215,8 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-								<div class="service-item">
+							<div class="col-lg-4 col-md-6 col-sm-6 col-xs-11">
+								<div class="service-item hover-style"> <span></span>
 									<img src="assets/images/services-svg/design.svg" alt="">
 									<h3>CMS Development</h3>
 									<p>Egens Lab, design team is dedicated to creating an experience 
@@ -401,7 +408,7 @@
 									<div class="about-us-wrapper">
 										<img src="assets/images/icon/quate11.png" alt="">
 										<h2>What Our clients saying?</h2>
-										<blockquote>Lorem Ipsum is simply dummy text of the printing and typesetting indus try. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scra mbled it to make a type specimen book. It has survived not only five centuries, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, took a galley of type and scrambled it to make a type specimen book.  Mbled it to make a type specimen book.</blockquote>
+										<blockquote>We are a human-centered design company whose methodology is rooted in design thinking. We believe in the potent power of listening and empathising. We believe in tapping into your needs, wants and desires. We want to understand what makes you tick, because each of us, be it an individual or an organization, have a unique story to tell. And at CoDesign, we connect these stories and combine them with bold design skills to provide meaningful.</blockquote>
 										<div class="author-meta d-flex">
 											<div class="author-meta-img">
 												<img src="assets/images/author-image.png" alt="#">
@@ -417,7 +424,7 @@
 									<div class="about-us-wrapper">
 										<img src="assets/images/icon/quate11.png" alt="">
 										<h2>What Our clients saying?</h2>
-										<blockquote>Lorem Ipsum is simply dummy text of the printing and typesetting indus try. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scra mbled it to make a type specimen book. It has survived not only five centuries, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, took a galley of type and scrambled it to make a type specimen book.  Mbled it to make a type specimen book.</blockquote>
+										<blockquote>We are a human-centered design company whose methodology is rooted in design thinking. We believe in the potent power of listening and empathising. We believe in tapping into your needs, wants and desires. We want to understand what makes you tick, because each of us, be it an individual or an organization, have a unique story to tell. And at CoDesign, we connect these stories and combine them with bold design skills to provide meaningful.</blockquote>
 										<div class="author-meta d-flex">
 											<div class="author-meta-img">
 												<img src="assets/images/author-image.png" alt="#">
@@ -433,7 +440,7 @@
 									<div class="about-us-wrapper">
 										<img src="assets/images/icon/quate11.png" alt="">
 										<h2>What Our clients saying?</h2>
-										<blockquote>Lorem Ipsum is simply dummy text of the printing and typesetting indus try. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scra mbled it to make a type specimen book. It has survived not only five centuries, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, took a galley of type and scrambled it to make a type specimen book.  Mbled it to make a type specimen book.</blockquote>
+										<blockquote>We are a human-centered design company whose methodology is rooted in design thinking. We believe in the potent power of listening and empathising. We believe in tapping into your needs, wants and desires. We want to understand what makes you tick, because each of us, be it an individual or an organization, have a unique story to tell. And at CoDesign, we connect these stories and combine them with bold design skills to provide meaningful.</blockquote>
 										<div class="author-meta d-flex">
 											<div class="author-meta-img">
 												<img src="assets/images/author-image.png" alt="#">
@@ -457,17 +464,19 @@
 				<div class="col-xxl-5 col-xl-4 col-lg-12 col-md-12 col-sm-12 col-xs-12 px-0">
 					<div class="section-title-area color-4">
 						<div class="section-area-wrapper">
-							<h2 class="section-title">REMARK CLIENTS</h2>
+							<h2 class="section-title">REMARKABLE CLIENTS</h2>
 							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
 								Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
-							<a href="#" class="clients-logo"><img src="assets/images/icon/Group 8805.svg" alt=""></a>
-							<a href="#" class="clients-logo"><img src="assets/images/icon/Group 8805.svg" alt=""></a>
-							<a href="#" class="clients-logo"><img src="assets/images/icon/Group 8805.svg" alt=""></a>
-							<a href="#" class="clients-logo"><img src="assets/images/icon/Group 8805.svg" alt=""></a>
-							<a href="#" class="clients-logo"><img src="assets/images/icon/Group 8805.svg" alt=""></a>
-							<a href="#" class="clients-logo"><img src="assets/images/icon/Group 8805.svg" alt=""></a>
-							<a href="#" class="clients-logo"><img src="assets/images/icon/Group 8805.svg" alt=""></a>
-							<a href="#" class="clients-logo"><img src="assets/images/icon/Group 8805.svg" alt=""></a>
+							<div class="clients-logo d-flex justify-content-center flex-wrap">
+								<a href="#" class="clients-logo"><img src="assets/images/icon/Group 8805.svg" alt=""></a>
+								<a href="#" class="clients-logo"><img src="assets/images/icon/Group 8805.svg" alt=""></a>
+								<a href="#" class="clients-logo"><img src="assets/images/icon/Group 8805.svg" alt=""></a>
+								<a href="#" class="clients-logo"><img src="assets/images/icon/Group 8805.svg" alt=""></a>
+								<a href="#" class="clients-logo"><img src="assets/images/icon/Group 8805.svg" alt=""></a>
+								<a href="#" class="clients-logo"><img src="assets/images/icon/Group 8805.svg" alt=""></a>
+								<a href="#" class="clients-logo"><img src="assets/images/icon/Group 8805.svg" alt=""></a>
+								<a href="#" class="clients-logo"><img src="assets/images/icon/Group 8805.svg" alt=""></a>
+							</div>
 						</div>
 					</div>	
 				</div>
@@ -492,7 +501,7 @@
 					<div class="section-content-area product-content-area">
 						<div class="row g-4 d-flex justify-content-center">
 							<div class="col-xxl-5 col-lg-5 col-md-5 col-sm-5 col-xs-10">
-								<div class="product-item">
+								<div class="product-item hover-style"> <span></span>
 									<img src="assets/images/product-1.png" alt="">
 									<h3><a href="#">EG Notification Plugin</a></h3>
 									<p><span><a href="#"><i class="bi bi-download"></i>1590+</a></span> 
@@ -501,7 +510,7 @@
 								</div>
 							</div>
 							<div class="col-xxl-5 col-lg-5 col-md-5 col-sm-5 col-xs-10">
-								<div class="product-item">
+								<div class="product-item hover-style"> <span></span>
 									<img src="assets/images/product-2.png" alt="">
 									<h3><a href="#">EG Notification Plugin</a></h3>
 									<p><span><a href="#"><i class="bi bi-download"></i>1590+</a></span> 
@@ -510,7 +519,7 @@
 								</div>
 							</div>
 							<div class="col-xxl-5 col-lg-5 col-md-5 col-sm-5 col-xs-0">
-								<div class="product-item">
+								<div class="product-item hover-style"> <span></span>
 									<img src="assets/images/product-2.png" alt="">
 									<h3><a href="#">Egens CRM Software</a></h3>
 									<p><span><a href="#"><i class="bi bi-download"></i>1590+</a></span> 
@@ -519,7 +528,7 @@
 								</div>
 							</div>
 							<div class="col-xxl-5 col-lg-5 col-md-5 col-sm-5 col-xs-10">
-								<div class="product-item">
+								<div class="product-item hover-style"> <span></span>
 									<img src="assets/images/product-3.png" alt="">
 									<h3><a href="#">EG Notification Plugin</a></h3>
 									<p><span><a href="#"><i class="bi bi-download"></i>1590+</a></span> 
@@ -541,9 +550,9 @@
 				<div class="col-xxl-7 col-xl-8 col-lg-12 col-md-12 col-sm-12 col-xs-12 px-0">
 					<div class="section-content-area about-content s-color-1">
 						<div class="blog-left-wrapper">
-							<div class="row">
-								<div class="col-lg-8 col-md-6">
-									<div class="blog-left-items">
+							<div class="row d-flex justify-content-center g-4">
+								<div class="col-lg-8 col-md-6 col-sm-8 col-xs-11">
+									<div class="blog-left-items hover-style"><span></span>
 										<img src="assets/images/blog11.png" alt="">
 										<div class="blog-contents">
 											<h4><a href="#">Brand Building: The 7 steps to creating a strong Brand. 
@@ -556,8 +565,8 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-lg-4 col-md-6">
-									<div class="blog-left-items">
+								<div class="col-lg-4 col-md-6 col-sm-8 col-xs-11">
+									<div class="blog-left-items hover-style"><span></span>
 										<img src="assets/images/blog22.png" alt="">
 										<div class="blog-contents">
 											<h4><a href="#">Brand Building: The 7 steps to creating a strong Brand.</a></h4>
@@ -575,6 +584,7 @@
 				</div>
 				<div class="col-xxl-5 col-xl-4 col-lg-12 col-md-12 col-sm-12 col-xs-12 px-0">
 					<div class="section-title-area color-5">
+						
 						<div class="section-area-wrapper blog-right-content">
 							<h2 class="section-title">Our Letest Blogs</h2>
 							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
@@ -595,18 +605,26 @@
 	<!-- Blog Section End -->
 	<!-- Footer Section Start -->
 	<div class="footer">
-		<div class="footer-items d-flex justify-content-between">
-			<div class="copyright">
-				<a href="#">© 2022 EGENS LAB</a>
-			</div>
-			<div class="footer-icon">
-				<a href="#"><i class='bx bxl-facebook'></i></a>
-				<a href="#"><i class='bx bxl-twitter' ></i></a>
-				<a href="#"><i class='bx bxl-instagram' ></i></a>
-				<a href="#"><i class='bx bxl-pinterest-alt' ></i></a>
-			</div>
-			<div class="back-batn">
-				<a href="#">BACK TO TOP</a>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
+					<div class="copyright d-flex justify-content-md-start justify-content-center ">
+						<a href="#">© 2022 EGENS LAB</a>
+					</div>
+				</div>
+				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
+					<div class="footer-icon d-flex justify-content-center">
+						<a href="#"><i class='bx bxl-facebook'></i></a>
+						<a href="#"><i class='bx bxl-twitter' ></i></a>
+						<a href="#"><i class='bx bxl-instagram' ></i></a>
+						<a href="#"><i class='bx bxl-pinterest-alt' ></i></a>
+					</div>
+				</div>
+				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
+					<div class="back-batn d-flex justify-content-md-end justify-content-center">
+						<a href="#">BACK TO TOP</a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
