--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
 			</div>
 		</div>
 	</header>
+	<div class="mobile-menu-wrapper">
+
 	<div class="mobile-menu">
-		<div class="mobile-menu-wrapper">
 			<div class="mobile-menu-header d-flex justify-content-between mb-5">
 				<div class="mobile-logo">
 					<img src="assets/images/egenslab-logo.png" alt="">
@@ -105,10 +106,10 @@
 			</ul>
 			<div class="social-connect">
 				<ul>
-					<li><a href="#">Facebook</a></li>
-					<li><a href="#">Instagram</a></li>
-					<li><a href="#">Twitter</a></li>
-					<li><a href="#">Linkedin</a></li>
+					<li><a href="#"><i class='bx bxl-facebook'></i></a></li>
+					<li><a href="#"><i class='bx bxl-twitter' ></i></a></li>
+					<li><a href="#"><i class='bx bxl-instagram' ></i></a></li>
+					<li><a href="#"><i class='bx bxl-pinterest-alt' ></i></a></li>
 				</ul>
 			</div>
 		</div>
@@ -153,7 +154,7 @@
 					</div>	
 				</div>
 				<div class="col-xxl-7 col-xl-8 col-lg-12 col-md-12 col-sm-12 col-xs-12 px-0">
-					<div class="section-content-area">
+					<div class="section-content-area service-content-area">
 						<div class="row g-4 d-flex justify-content-center">
 							<div class="col-lg-4 col-md-6 col-sm-6 col-xs-11">
 								<div class="service-item hover-style"> <span></span>
@@ -254,13 +255,15 @@
 							
 							<div class="row g-0 align-items-center">
 								<div class="col-xl-5 col-lg-5 col-md-5 col-sm-5 ">
-									<div class="about-us-image text-center">
-										<img class="img-fluid rounded-circle" src="assets/images/about-us-image.png" alt="About Us">	
-										<div class="video-pluse">
-											<span style="--i:1;"></span>
-											<span style="--i:5;"></span>
-											<span style="--i:3;"></span>
-											<a href="https://www.youtube.com/watch?v=u31qwQUeGuM" class="video-frame video-icon"><i class="bx bx-play"></i></a>
+									<div class="video-area overflow-hidden">
+										<div class="about-us-image text-center">
+											<img class="img-fluid rounded-circle" src="assets/images/about-us-image.png" alt="About Us">	
+											<div class="video-pluse">
+												<span style="--i:1;"></span>
+												<span style="--i:5;"></span>
+												<span style="--i:3;"></span>
+												<a href="https://www.youtube.com/watch?v=u31qwQUeGuM" class="video-frame video-icon"><i class="bx bx-play"></i></a>
+											</div>
 										</div>
 									</div>
 								</div>
@@ -271,7 +274,7 @@
 												<i class="bi bi-people"></i>
 											</div>
 											<div class="about-us-state-item-content">
-												<h4>20+</h4>
+												<h4><a href="#">20+</a></h4>
 												<p>Expert Member</p>
 											</div>
 										</div>
@@ -280,7 +283,7 @@
 												<i class="bi bi-emoji-smile"></i>
 											</div>
 											<div class="about-us-state-item-content">
-												<h4>150+</h4>
+												<h4><a href="#">150+</a></h4>
 												<p>Satisfied Client</p>
 											</div>
 										</div>
@@ -293,7 +296,7 @@
 												<i class="bi bi-download"></i>
 											</div>
 											<div class="about-us-state-item-content">
-												<h4>2500+</h4>
+												<h4><a href="#">2500+</a></h4>
 												<p>Download</p>
 											</div>
 										</div>
@@ -302,7 +305,7 @@
 												<i class="bi bi-grid"></i>
 											</div>
 											<div class="about-us-state-item-content">
-												<h4>20+</h4>
+												<h4><a href="#">20+</a></h4>
 												<p>Total Unique Product</p>
 											</div>
 										</div>
@@ -340,7 +343,7 @@
 					</div>	
 				</div>
 				<div class="col-xxl-7 col-xl-8 col-lg-12">
-					<div class="section-content-area">
+					<div class="section-content-area work-content-area">
 						<h3 class="work-process-title">How do we help brands achieve their <br> desired goals?</h3>
 						<div class="work-process-item1">
 							<div class="work-icon">
