--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
 </head>
 <body>
     <!-- ===============  Preloader start =============== -->
-    <div class="preloader">
-        <div class="loader">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-          </div>
+    <div id="pre-load">
+        <div id="loader" class="loader">
+            <div class="loader-container">
+                <div class='loader-icon'><img src="assets/images/sm-logo.png" alt="Egens-lab"></div>
+            </div>
+        </div>              
     </div>
-	<div class="cursor d-lg-block d-none"></div>
-
+	<!-- <div class="cursor d-lg-block d-none"></div> -->
+	<div class="cursor"></div>
+	<div class="cursor2"></div>
      <!-- ===============  Preloader end =============== -->
 
 	<!-- Header Section Start -->
-<header>
+<header class="home-one">
 		<div class="header-area">
 			<div class="container-fluid">
 				<div class="row">
@@ -55,7 +55,7 @@
 						<nav class="main-nav">
 							<ul>
 								<li>
-									<a href="#"><span>Egens</span> About Us</a>
+									<a href="index-2.html"><span>Egens</span> About Us</a>
 								</li>
 								<li>
 									<a href="#"><span>Talent</span> Services</a>
