--- a/index-2.html
+++ b/index-2.html
@@ -166,7 +166,7 @@
                             <a href="#" class="menu-link drop-down">Home<i class="bi bi-plus dropdown-icon"></i></a>
                             <ul class="submenu">
                                 <li class="sub-item"><a href="index.html">Home 1</a></li>
-                                <li class="sub-item"><a href="index2.html">home 2</a></li>
+                                <li class="sub-item"><a href="index-2.html">home 2</a></li>
                             </ul>
                         </li>
 						<li class="menu-item">
@@ -189,7 +189,7 @@
                         <li class="menu-item">
                             <a href="#" class="menu-link drop-down">blog<i class="bi bi-plus dropdown-icon"></i></a>
                             <ul class="submenu">
-                                <li class="sub-item"><a href="blog-grid.html">blog grid</a></li>
+                                <li class="sub-item"><a href="blog.html">blog grid</a></li>
                                 <li class="sub-item"><a href="blog-sidebar.html">Blog sidebar</a></li>
                                 <li class="sub-item"><a href="blog-details.html">Blog details</a></li>
                             </ul>
