scroll issue fixed

--- a/blog.html
+++ b/blog.html
@@ -240,9 +240,10 @@
                         </ol>
                     </nav>
                     <h2>OUR BLOG</h2>
-                    <h2 class="rotate-text">Our Blog</h2>
+                    <span></span>
+                    <!-- <img class="banner-btm-shadow" src="assets/images/shape/banner-shadow-btm.png" alt=""> -->
                 </div>
-                <img class="banner-btm-shadow" src="assets/images/shape/banner-shadow-btm.png" alt="">
+                
             </div>
             <div class="col-lg-5 d-lg-block d-none">
                 <div class="inner-banner-bg">
