--- a/index-2.html
+++ b/index-2.html
@@ -730,9 +730,9 @@
                 </div>	
             </div>
             <div class="col-xxl-7 col-xl-8 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <div class="section-content-area product-section-content d-flex align-items-center">
+                <div class="section-content-area product-section-content d-flex align-items-center justify-content-center">
                     <div class="row g-4">
-                        <div class="col-lg-6">
+                        <div class="col-sm-6">
                             <div class="product-item hover-style mb-30"><span></span>
                                 <div class="product-img">
                                     <img class="img-fluid" src="assets/images/product-1.png" alt="">
@@ -772,7 +772,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-sm-6">
                             <div class="product-item hover-style mb-30"><span></span>
                                 <div class="product-img">
                                     <img class="img-fluid"  src="assets/images/product-2.png" alt="">
