--- a/blog.html
+++ b/blog.html
@@ -166,32 +166,17 @@
                             <a href="#" class="menu-link drop-down">Home<i class="bi bi-plus dropdown-icon"></i></a>
                             <ul class="submenu">
                                 <li class="sub-item"><a href="index.html">Home 1</a></li>
-                                <li class="sub-item"><a href="index-2.html">home 2</a></li>
+                                <li class="sub-item"><a href="index 2.html">home 2</a></li>
                             </ul>
                         </li>
 						<li class="menu-item">
-                            <a href="#" class="menu-link drop-down">Pages<i class="bi bi-plus dropdown-icon"></i></a>
-                            <ul class="submenu">
-                                <li class="sub-item"><a href="team.html">team</a></li>
-                                <li class="sub-item"><a href="feedback.html">feedback</a></li>
-                                <li class="sub-item"><a href="faq.html">faq</a></li>
-                                <li class="sub-item"><a href="404.html">Error-404</a></li>
-                            </ul>
-                        </li>
+                            <a href="#" class="menu-link">Pages</a></li>
                         
-                        <li class="menu-item">
-                            <a href="#" class="menu-link drop-down">services<i class="bi bi-plus dropdown-icon"></i></a>
-                            <ul class="submenu">
-                                <li class="sub-item"><a href="service.html">services</a></li>
-                                <li class="sub-item"><a href="service-details.html">services Details</a></li>
-                            </ul>
-                        </li>
+                        <li class="menu-item"><a href="#" class="menu-link">services</a></li>
                         <li class="menu-item">
                             <a href="#" class="menu-link drop-down">blog<i class="bi bi-plus dropdown-icon"></i></a>
                             <ul class="submenu">
-                                <li class="sub-item"><a href="blog.html">blog grid</a></li>
-                                <li class="sub-item"><a href="blog-sidebar.html">Blog sidebar</a></li>
-                                <li class="sub-item"><a href="blog-details.html">Blog details</a></li>
+                                <li class="sub-item"><a href="blog.html">blog</a></li>
                             </ul>
                         </li>
                         
