--- a/blog.html
+++ b/blog.html
@@ -74,34 +74,34 @@
                 <div class="sidebar-gallery">
                 <ul class="gallery">
                     <li>
-                        <a href="assets/images/bg/fimg-big2.png"
+                        <a href="assets/images/blog-11.png"
                             class="hover-btn image-open"><span><img
-                                    src="assets/images/bg/fimg-big2.png" alt=""></span></a>
+                                    src="assets/images/blog-11.png" alt=""></span></a>
                     </li>
                     <li>
-                        <a href="assets/images/bg/fimg-big1.png"
+                        <a href="assets/images/blog-22.png"
                             class="hover-btn image-open"><span><img
-                                    src="assets/images/bg/fimg-big1.png" alt=""></span></a>
+                                    src="assets/images/blog-22.png" alt=""></span></a>
                     </li>
                     <li>
-                        <a href="assets/images/bg/fimg-big3.png"
+                        <a href="assets/images/blog-33.png"
                             class="hover-btn image-open"><span><img
-                                    src="assets/images/bg/fimg-big3.png" alt=""></span></a>
+                                    src="assets/images/blog-33.png" alt=""></span></a>
                     </li>
                     <li>
-                        <a href="assets/images/bg/fimg-big4.png"
+                        <a href="assets/images/blog-11.png"
                             class="hover-btn image-open"><span><img
-                                    src="assets/images/bg/fimg-big4.png" alt=""></span></a>
+                                    src="assets/images/blog-11.png" alt=""></span></a>
                     </li>
                     <li>
-                        <a href="assets/images/bg/fimg-big5.png"
+                        <a href="assets/images/blog-22.png"
                             class="hover-btn image-open"><span><img
-                                    src="assets/images/bg/fimg-big5.png" alt=""></span></a>
+                                    src="assets/images/blog-22.png" alt=""></span></a>
                     </li>
                     <li>
-                        <a href="assets/images/bg/fimg-big6.png"
+                        <a href="assets/images/blog-33.png"
                             class="hover-btn image-open"><span><img
-                                    src="assets/images/bg/fimg-big6.png" alt=""></span></a>
+                                    src="assets/images/blog-33.png" alt=""></span></a>
                     </li>
                 </ul>
                 </div>
@@ -166,32 +166,17 @@
                             <a href="#" class="menu-link drop-down">Home<i class="bi bi-plus dropdown-icon"></i></a>
                             <ul class="submenu">
                                 <li class="sub-item"><a href="index.html">Home 1</a></li>
-                                <li class="sub-item"><a href="index-2.html">home 2</a></li>
+                                <li class="sub-item"><a href="index 2.html">home 2</a></li>
                             </ul>
                         </li>
 						<li class="menu-item">
-                            <a href="#" class="menu-link drop-down">Pages<i class="bi bi-plus dropdown-icon"></i></a>
-                            <ul class="submenu">
-                                <li class="sub-item"><a href="team.html">team</a></li>
-                                <li class="sub-item"><a href="feedback.html">feedback</a></li>
-                                <li class="sub-item"><a href="faq.html">faq</a></li>
-                                <li class="sub-item"><a href="404.html">Error-404</a></li>
-                            </ul>
-                        </li>
+                            <a href="#" class="menu-link">Pages</a></li>
                         
-                        <li class="menu-item">
-                            <a href="#" class="menu-link drop-down">services<i class="bi bi-plus dropdown-icon"></i></a>
-                            <ul class="submenu">
-                                <li class="sub-item"><a href="service.html">services</a></li>
-                                <li class="sub-item"><a href="service-details.html">services Details</a></li>
-                            </ul>
-                        </li>
+                        <li class="menu-item"><a href="#" class="menu-link">services</a></li>
                         <li class="menu-item">
                             <a href="#" class="menu-link drop-down">blog<i class="bi bi-plus dropdown-icon"></i></a>
                             <ul class="submenu">
-                                <li class="sub-item"><a href="blog.html">blog grid</a></li>
-                                <li class="sub-item"><a href="blog-sidebar.html">Blog sidebar</a></li>
-                                <li class="sub-item"><a href="blog-details.html">Blog details</a></li>
+                                <li class="sub-item"><a href="blog.html">blog</a></li>
                             </ul>
                         </li>
                         
@@ -199,7 +184,7 @@
                     </ul>
                     <!-- mobile-search-area -->
                    <div class="mobile-menu-bottom d-lg-none d-block">
-                    <a href="#" class="mob-btn-start eg-btn header-button hover-btn"><span>Start Project</span></a>
+                    <a href="#" class="mob-btn-start res-eg-btn eg-btn header-button hover-btn"><span>Start Project</span></a>
                     <ul class="header-social">
                         <li><a href="#">FB</a></li>
                         <li><a href="#">TW</a></li>
@@ -281,7 +266,7 @@
                         <div class="content">
                             <p>Nowdays this eCommerce business is becoming a very popular trend. Many people are showing their interest in the e-commerce business. Many of them are planning to start an eCommerce business. Most people are taking this business as their primary or secondary income source. But before starting this business should know that a well-organized website can be an impactful thing for the business. </p>
                         </div>
-                        <div class="blog-btn-icon d-flex justify-content-between">
+                        <div class="blog-btn-icon d-flex flex-wrap justify-content-between">
                             <div class="blog-btn">
                                 <a href="#">Read More 
                                     <svg width="51" height="13" viewBox="0 0 51 13" xmlns="http://www.w3.org/2000/svg">
@@ -324,7 +309,7 @@
                         <div class="content">
                             <p>Nowdays this eCommerce business is becoming a very popular trend. Many people are showing their interest in the e-commerce business. Many of them are planning to start an eCommerce business. Most people are taking this business as their primary or secondary income source. But before starting this business should know that a well-organized website can be an impactful thing for the business. </p>
                         </div>
-                        <div class="blog-btn-icon d-flex justify-content-between">
+                        <div class="blog-btn-icon d-flex flex-wrap justify-content-between">
                             <div class="blog-btn">
                                 <a href="#">Read More 
                                     <svg width="51" height="13" viewBox="0 0 51 13" xmlns="http://www.w3.org/2000/svg">
@@ -367,7 +352,7 @@
                         <div class="content">
                             <p>Nowdays this eCommerce business is becoming a very popular trend. Many people are showing their interest in the e-commerce business. Many of them are planning to start an eCommerce business. Most people are taking this business as their primary or secondary income source. But before starting this business should know that a well-organized website can be an impactful thing for the business. </p>
                         </div>
-                        <div class="blog-btn-icon d-flex justify-content-between">
+                        <div class="blog-btn-icon d-flex flex-wrap justify-content-between">
                             <div class="blog-btn">
                                 <a href="#">Read More 
                                     <svg width="51" height="13" viewBox="0 0 51 13" xmlns="http://www.w3.org/2000/svg">
@@ -445,36 +430,32 @@
 
 
 
-
-
-
-
-	<!-- Footer Section Start -->
-	<!-- <div class="footer">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
-					<div class="copyright d-flex justify-content-md-start justify-content-center ">
-						<a href="#">© 2022 EGENS LAB</a>
-					</div>
-				</div>
-				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
-					<div class="footer-icon d-flex justify-content-center">
-						<a href="#"><i class='bx bxl-facebook'></i></a>
-						<a href="#"><i class='bx bxl-twitter' ></i></a>
-						<a href="#"><i class='bx bxl-instagram' ></i></a>
-						<a href="#"><i class='bx bxl-pinterest-alt' ></i></a>
-					</div>
-				</div>
-				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
-					<div class="back-batn d-flex justify-content-md-end justify-content-center">
-						<a href="#">BACK TO TOP</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div> -->
-	<!-- Footer Section Start -->
+<!-- Footer Section Start -->
+<div class="footer">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
+                <div class="copyright d-flex justify-content-md-start justify-content-center ">
+                    <a href="#">© 2022 EGENS LAB</a>
+                </div>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
+                <div class="footer-icon d-flex justify-content-center">
+                    <a href="#"><i class='bx bxl-facebook'></i></a>
+                    <a href="#"><i class='bx bxl-twitter' ></i></a>
+                    <a href="#"><i class='bx bxl-instagram' ></i></a>
+                    <a href="#"><i class='bx bxl-pinterest-alt' ></i></a>
+                </div>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
+                <div class="back-batn d-flex justify-content-md-end justify-content-center">
+                    <a href="#">BACK TO TOP</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Footer Section end -->
 
 
     <!-- Jquery JS -->
